<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingsActivity">

    <include
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/locationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/choose_location"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/mapIv"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_map_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/radiusContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/locationContainer"
        tools:layout_editor_absoluteX="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16sp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/radius"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:minEms="4"
            android:maxEms="4"
            android:maxLength="4"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/roboto"
            android:inputType="number"
            android:padding="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/km"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/wifiContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiusContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/wifi_names"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/roboto"
            android:inputType="number"
            android:layout_alignParentEnd="true"
            android:padding="4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>